--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: nodejs 
+        ECR_REPOSITORY: guestbook 
         IMAGE_TAG: ${{ github.sha }}
       run: |
         # Build a docker container and
